2010-01-06  Kevin Decker  <kdecker@apple.com>

        Reviewed by Eric Carlson.
        
        First step toward:
        <rdar://problem/6398111> Integrate hardware layers with out-of-process plug-ins layer hosting mechanism
        
        Small refactoring moving the PluginWidget class from WebKit to WebCore.          
        * WebCore.xcodeproj/project.pbxproj: Added new source files and a "mac" group; exposes PluginWidget.h as a "Private" role
        * platform/Widget.h: Added isPluginWidget(). 
        (WebCore::Widget::isPluginWidget):
        * plugins/PluginWidget.h: Added.
        (WebCore::PluginWidget::isPluginWidget): Added as an interim solution until Mac plug-ins inheirt from PluginView.
        * plugins/mac/PluginWidgetMac.mm: Added.
        (WebCore::PluginWidget::invalidateRect): Added. Extracted from the old WebKit/FrameLoaderClientMac version of PluginWidget
        
2010-01-06  Eric Seidel  <eric@webkit.org>

        No review, rolling out r52862.
        http://trac.webkit.org/changeset/52862
        https://bugs.webkit.org/show_bug.cgi?id=33258

        Caused svg/W3C-SVG-1.1/linking-a-01-b.svg to crash on the
        Leopard Release builder.

        * platform/image-decoders/png/PNGImageDecoder.cpp:
        (WebCore::PNGImageReader::decode):

2010-01-06  Nikolas Zimmermann  <nzimmermann@rim.com>

        Not reviewed. Revert the part of my last commit touching Base.xcconfig, was not meant to be commited.

        * Configurations/Base.xcconfig:

2010-01-05  Nate Chapin  <japhet@chromium.org>

        Reviewed by Dimitri Glazkov.

        Generate header declarations for V8 binding security checks
        and delete V8CustomBinding.cpp

        * Android.v8bindings.mk: Removed V8CustomBinding.cpp.
        * WebCore.gypi: Removed V8CustomBinding.cpp.
        * bindings/scripts/CodeGeneratorV8.pm: Generate security check declarations.
        * bindings/v8/V8DOMWindowShell.cpp: