@@ -1,3 +1,11 @@
+2010-01-06  Mark Rowe  <mrowe@apple.com>
+
+        Fix the Mac build.
+
+        * WebCore.base.exp: Export symbols WebKit would like to use.
+        * plugins/PluginWidget.h:
+        (WebCore::PluginWidget::PluginWidget): Redeclare a constructor.
+
 2010-01-06  Kevin Decker  <kdecker@apple.com>
 
         Reviewed by Eric Carlson.
